second commit added(content)

--- a/index.html
+++ b/index.html
@@ -45,16 +45,36 @@
 
     <div class="wrapper">
         <div class="main-content">
+        <div class="content">
             <div class="news">
             <h3>News And Events</h3>
-                <h6>THE SPUQC CULTURAL SHOW 2016 (APRIL 15-17, 2016)</h6><p>April 15, 2016</p>
+                <p><h5>THE SPUQC CULTURAL SHOW 2016 (APRIL 15-17, 2016)</h5><h6>April 15, 2016</h6></p>
 
-                <h6>ST. PAUL'S CELEBRATION (JANUARY 25, 2016)</h6><p>January 25, 2016</p>
+                <p><h5>ST. PAUL'S CELEBRATION (JANUARY 25, 2016)</h5><h6>January 25, 2016</h6></p>
 
-                <h6>ISO EXTERNAL AUDIT (JANUARY 15, 2016)</h6><p>January 15, 2016</p>
+                <p><h5>ISO EXTERNAL AUDIT (JANUARY 15, 2016)</h5><h6>January 15, 2016</h6></p>
 
-                <h6>16TH ASIAN BIOETHICS CONFERENCE (NOVEMBER 4-8, 2015)</h6><p>November 24, 2015</p>
+                <p><h5>16TH ASIAN BIOETHICS CONFERENCE (NOVEMBER 4-8, 2015)</h5><h6>November 24, 2015</h6></p>
+                <input type="submit" class="btn newsbtn" value="Read more news">
             </div>
+        </div>
+        <div class="content">
+            <div class="announcements">
+            <h3>Anouncements</h3>
+                <h5>BLOODLETTING ACTIVITY</h5>
+                <h5>BASIC EDUCATION ACTIVITIES FROM MARCH TO JULY 2016</h5>
+                <h5>ENROLLMENT SCHEDULE FOR SY2016-2017</h5>
+                <h5>COLLEGE ACTIVITIES FROM APRIL TO JULY 2016</h5>
+                <input type="submit" class="btn announce" value="Check all announcements">
+            </div>
+        </div>
+        <div class="content">
+            <div class="featured">
+            <h3>Featured Achiever</h3>
+                <img class="branding pull-left" src="spuqc/Sidney-Tigas.jpg" alt="x-plore.me">
+            </div>
+             <input type="submit" class="btn feat" value="See all achievers">
+        </div>
         </div>
     </div>
 </body>
