third commit added(contents-container)

--- a/index.html
+++ b/index.html
@@ -68,14 +68,47 @@
                 <input type="submit" class="btn announce" value="Check all announcements">
             </div>
         </div>
-        <div class="content">
-            <div class="featured">
-            <h3>Featured Achiever</h3>
-                <img class="branding pull-left" src="spuqc/Sidney-Tigas.jpg" alt="x-plore.me">
+            <div class="content">
+                <div class="featured">
+                <h3>Featured Achiever</h3>
+                    <img class="branding pull-left" src="spuqc/Sidney-Tigas.jpg" alt="x-plore.me">
+                </div>
+                 <input type="submit" class="btn feat" value="See all achievers">
             </div>
-             <input type="submit" class="btn feat" value="See all achievers">
         </div>
+    </div>
+    <div class="wrapper">
+    <div class="main-content">
+        <div class="sub-content">
+            <div class="subscribe">
+                <h3>Subscribe to SPUQC Daily Updates</h3>
+                <h5>Lets keep in touch! Please leave your email here for daily dose of Paulinian news.</h5>
+                <input type="text" class='content-input'><input type="submit" value="Subscribe" class="content-btn">
+            </div>
         </div>
+        <div class="sub-content fb">
+            <div class="facebook">
+                <h3>Like us on Facebook</h3>
+            </div>
+        </div>
+        <div class="sub-content">
+            <div class="insta">
+                <h3>Instagram Photo Feeds</h3>
+            </div>
+        </div>
+        <div class="sub-content twtr">
+            <div class="tweet">
+                <h3>SPUQC Tweets</h3>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="wrapper">
+    <div class="main-content">
+        <div class="last-content">
+            <h3>Inquiries, Comments and Suggestions</h3>
+        </div>
+    </div>
     </div>
 </body>
 </html>
