fourth commit added(Details, Inquiry Section)

--- a/index.html
+++ b/index.html
@@ -107,8 +107,31 @@
     <div class="main-content">
         <div class="last-content">
             <h3>Inquiries, Comments and Suggestions</h3>
+            <h5>We'd love to hear from you! Please contact us to learn more about undergraduate and graduate degrees, pre-college college programs, language development, and professional learning opportunities.
+            </h5>
+            <div class="last-input">
+                <input type="text" placeholder="Name*" class="input">
+            </div>
+            <div class="last-input">
+                <input type="email" placeholder="Email*" class="input">
+            </div>
+            <div class="last-input">
+                <input type="number" placeholder="Phone" class="input">
+            </div>
+            <input type="text" placeholder="Subject*" class="input-subj">
+            <textarea placeholder="Message*" class="input-subj"></textarea>
+            <input type="submit" value="Submit Inquiry" class="btn-inqry">
         </div>
     </div>
     </div>
+    <footer>
+        <div class="wrapper">
+            <div class="footer">
+                <div class="footer-details">
+                About Spuqc
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
