fifth commit added(Footer container (Not yet finish))

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </div>
 </header>
-    <div class="main-nav">
+    <div class="main-nav clearfix">
         <div class="wrapper">
             <ul>
                 <li><a href="#">Home</li>
@@ -45,29 +45,29 @@
 
     <div class="wrapper">
         <div class="main-content">
-        <div class="content">
-            <div class="news">
-            <h3>News And Events</h3>
-                <p><h5>THE SPUQC CULTURAL SHOW 2016 (APRIL 15-17, 2016)</h5><h6>April 15, 2016</h6></p>
+            <div class="content">
+                <div class="news">
+                <h3>News And Events</h3>
+                    <p><h5>THE SPUQC CULTURAL SHOW 2016 (APRIL 15-17, 2016)</h5><h6>April 15, 2016</h6></p>
 
-                <p><h5>ST. PAUL'S CELEBRATION (JANUARY 25, 2016)</h5><h6>January 25, 2016</h6></p>
+                    <p><h5>ST. PAUL'S CELEBRATION (JANUARY 25, 2016)</h5><h6>January 25, 2016</h6></p>
 
-                <p><h5>ISO EXTERNAL AUDIT (JANUARY 15, 2016)</h5><h6>January 15, 2016</h6></p>
+                    <p><h5>ISO EXTERNAL AUDIT (JANUARY 15, 2016)</h5><h6>January 15, 2016</h6></p>
 
-                <p><h5>16TH ASIAN BIOETHICS CONFERENCE (NOVEMBER 4-8, 2015)</h5><h6>November 24, 2015</h6></p>
-                <input type="submit" class="btn newsbtn" value="Read more news">
+                    <p><h5>16TH ASIAN BIOETHICS CONFERENCE (NOVEMBER 4-8, 2015)</h5><h6>November 24, 2015</h6></p>
+                    <input type="submit" class="btn newsbtn" value="Read more news">
+                    </div>
+                </div>
+            <div class="content">
+                <div class="announcements">
+                <h3>Anouncements</h3>
+                    <h5>BLOODLETTING ACTIVITY</h5>
+                    <h5>BASIC EDUCATION ACTIVITIES FROM MARCH TO JULY 2016</h5>
+                    <h5>ENROLLMENT SCHEDULE FOR SY2016-2017</h5>
+                    <h5>COLLEGE ACTIVITIES FROM APRIL TO JULY 2016</h5>
+                    <input type="submit" class="btn announce" value="Check all announcements">
+                </div>
             </div>
-        </div>
-        <div class="content">
-            <div class="announcements">
-            <h3>Anouncements</h3>
-                <h5>BLOODLETTING ACTIVITY</h5>
-                <h5>BASIC EDUCATION ACTIVITIES FROM MARCH TO JULY 2016</h5>
-                <h5>ENROLLMENT SCHEDULE FOR SY2016-2017</h5>
-                <h5>COLLEGE ACTIVITIES FROM APRIL TO JULY 2016</h5>
-                <input type="submit" class="btn announce" value="Check all announcements">
-            </div>
-        </div>
             <div class="content">
                 <div class="featured">
                 <h3>Featured Achiever</h3>
@@ -78,60 +78,52 @@
         </div>
     </div>
     <div class="wrapper">
-    <div class="main-content">
-        <div class="sub-content">
-            <div class="subscribe">
-                <h3>Subscribe to SPUQC Daily Updates</h3>
-                <h5>Lets keep in touch! Please leave your email here for daily dose of Paulinian news.</h5>
-                <input type="text" class='content-input'><input type="submit" value="Subscribe" class="content-btn">
+        <div class="main-content">
+            <div class="sub-content">
+                <div class="subscribe">
+                    <h3>Subscribe to SPUQC Daily Updates</h3>
+                    <h5>Lets keep in touch! Please leave your email here for daily dose of Paulinian news.</h5>
+                    <input type="text" class='content-input'><input type="submit" value="Subscribe" class="content-btn">
+                </div>
             </div>
-        </div>
-        <div class="sub-content fb">
-            <div class="facebook">
-                <h3>Like us on Facebook</h3>
+            <div class="sub-content fb">
+                <div class="facebook">
+                    <h3>Like us on Facebook</h3>
+                </div>
             </div>
-        </div>
-        <div class="sub-content">
-            <div class="insta">
-                <h3>Instagram Photo Feeds</h3>
+            <div class="sub-content">
+                <div class="insta">
+                    <h3>Instagram Photo Feeds</h3>
+                </div>
             </div>
-        </div>
-        <div class="sub-content twtr">
-            <div class="tweet">
-                <h3>SPUQC Tweets</h3>
-            </div>
-        </div>
-    </div>
-    </div>
-    <div class="wrapper">
-    <div class="main-content">
-        <div class="last-content">
-            <h3>Inquiries, Comments and Suggestions</h3>
-            <h5>We'd love to hear from you! Please contact us to learn more about undergraduate and graduate degrees, pre-college college programs, language development, and professional learning opportunities.
-            </h5>
-            <div class="last-input">
-                <input type="text" placeholder="Name*" class="input">
-            </div>
-            <div class="last-input">
-                <input type="email" placeholder="Email*" class="input">
-            </div>
-            <div class="last-input">
-                <input type="number" placeholder="Phone" class="input">
-            </div>
-            <input type="text" placeholder="Subject*" class="input-subj">
-            <textarea placeholder="Message*" class="input-subj"></textarea>
-            <input type="submit" value="Submit Inquiry" class="btn-inqry">
-        </div>
-    </div>
-    </div>
-    <footer>
-        <div class="wrapper">
-            <div class="footer">
-                <div class="footer-details">
-                About Spuqc
+            <div class="sub-content twtr">
+                <div class="tweet">
+                    <h3>SPUQC Tweets</h3>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+    <div class="wrapper">
+        <div class="main-content">
+            <div class="last-content">
+                <h3>Inquiries, Comments and Suggestions</h3>
+                <h5>We'd love to hear from you! Please contact us to learn more about undergraduate and graduate degrees, pre-college college programs, language development, and professional learning opportunities.
+                </h5>
+                <div class="last-input">
+                    <input type="text" placeholder="Name*" class="input">
+                </div>
+                <div class="last-input">
+                    <input type="email" placeholder="Email*" class="input">
+                </div>
+                <div class="last-input">
+                    <input type="number" placeholder="Phone" class="input">
+                </div>
+                <input type="text" placeholder="Subject*" class="input-subj">
+                <textarea placeholder="Message*" class="input-subj"></textarea>
+                <input type="submit" value="Submit Inquiry" class="btn-inqry">
+            </div>
+        </div>
+    </div>
+<footer>SPUQC</footer>
 </body>
 </html>
